# vendor-table-manager

./: .gitignore  check_code.py  docker-compose.yml  extension.json  extension.py  force_start.py  pyproject.toml  run.py  run_extension.py  test_connect.py
connect_ext/: plugin.py
connect_ext/templates/: index.html
templates/: index.html
vendor_extension/: extension.py
vendor_extension.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
vendor_extension/templates/: index.html
